--- a/Todo list website/templates/index.html
+++ b/Todo list website/templates/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <link href="/static/css/styles.css" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
     <style>
     h1 {
@@ -13,6 +12,7 @@
     padding: 20px;
     }
     </style>
+    <link href="{{ url_for('static', filename='css/styles.css') }}" rel="stylesheet">
     <title>J's Todolist website</title>
 </head>
 <body>
@@ -23,14 +23,22 @@
     </nav>
         <div class="container">
             <h1>Daily Quests</h1>
-            <form id="todo-form">
-                <input type="text" id="todo-input" placeholder="Add a new task" required>
+            <form id="todo-form" action="{{ url_for('todos') }}" method="post">
+                <input type="text" id="todo-input" name="todo-input" placeholder="Add a new task" required>
                 <button type="submit">Add</button>
-            </form>
-        <ul id="todo-list">
-              <!-- Todo items will be dynamically added here -->
-        </ul>
+            </form>              
+            <div class="container">
+                <!-- Todo list contents -->
+                <ul id="todo-list">
+                    {% for todo in todos %}
+                    <li {% if todo.completed %} class="completed" {% endif %}>
+                        <span>{{ todo.quest }}</span>
+                        <button class="delete-button">Delete</button>
+                    </li>
+                  {% endfor %}
+                </ul>
+            </div>
     </div>
 </body>
-<script src="../static/js/script.js"></script>
+<script src="{{ url_for('static', filename='js/script.js') }}"></script>
 </html>
